--- a/Android Client/DalekController/bin/AndroidManifest.xml
+++ b/Android Client/DalekController/bin/AndroidManifest.xml
@@ -20,7 +20,7 @@
         
         <activity
             android:screenOrientation="landscape"
-            android:name="com.example.dalekcontroller.MotorController"
+            android:name="com.example.dalekcontroller.BIDirectionalMotorPair"
             android:label="@string/app_name" >
             <intent-filter>
                 <action android:name="android.intent.action.SEND" />
