--- a/Android Client/DalekController/bin/AndroidManifest.xml
+++ b/Android Client/DalekController/bin/AndroidManifest.xml
@@ -19,10 +19,9 @@
         android:theme="@style/AppTheme" >
         <activity
             android:name="com.dalekcontroller.device.motor.BIDirectionalMotorPair"
-            android:label="@string/app_name"
-         
-          >
-           <!--   android:screenOrientation="landscape" --> 
+            android:label="@string/app_name" >
+
+            <!-- android:screenOrientation="landscape" -->
             <intent-filter>
                 <action android:name="android.intent.action.SEND" />
 
@@ -39,7 +38,10 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-      
+        <activity
+            android:name="com.example.dalekcontroller.ControlActivity"
+            android:label="@string/title_activity_control" >
+        </activity>
     </application>
 
 </manifest>
